<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Can\'t touch this</string>

    <!--IntroActivity-->
    <string name="ia_can_not">CAN\'T</string>
    <string name="ia_touch">TOUCH</string>
    <string name="ia_this">THIS</string>
    <string name="ia_relayr">relayr</string>
    <string name="ia_demo_app">DEMO APP</string>

    <!--CantTouchThisActivity-->
    <string name="ctta_title_select_accel">select accelerometer</string>
    <string name="ctta_empty_sensor_list">You don\'t have an accelerometer</string>
    <string name="ctta_empty_sensor_list_message">Please onboard your Wunderbar first.</string>
    <string name="successfully_logged_in">You were successfully logged in!</string>
    <string name="unsuccessfully_logged_in">There was a problem in the log in.</string>
    <string name="err_loading_user_data">Oops! Loading user data failed</string>
    <string name="err_loading_devices">Oops! Loading devices failed</string>
    <string name="err_socket_problem">Oops! Web socket problem</string>

    <!--DeviceNameActivity-->
    <string name="dna_what_are_you_protecting">What is it you\'re protecting?</string>
    <string name="dna_title_protected_object">protected object</string>
    <string name="dna_object_name">Name of object</string>
    <string name="dna_dialog_title">Name error</string>
    <string name="dna_dialog_message">Object name can not be empty.</string>
    <string name="dna_object_name_default">Object</string>

    <!--SettingsActivity-->
    <string name="sa_title_settings">settings</string>
    <string name="sa_alarm_sensitivity">Sensitivity</string>
    <string name="sa_reassign_sensor">Re-Assign sensor</string>
    <string name="sa_switch_sound">Sound</string>
    <string name="sa_switch_alarm">Alarm</string>

    <!--AlarmActivity-->
    <string name="aa_alarm_exclamation">Alarm!</string>
    <string name="aa_someone">Someone</string>
    <string name="aa_touched_your">Touched your</string>
    <string name="sa_sound_volume">Volume</string>
    <string name="sa_log_out">Logout</string>

    <string name="sda_your">YOUR</string>
    <string name="sda_is">IS</string>
    <string name="sda_safe">SAFE</string>

    <string name="sensor_name_prefix">Sensor </string>

    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="please_connect_to_wifi">Please connect to WiFi</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>


</resources>
