<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

    <io.relayr.commons.widget.CustomTextView
        android:id="@+id/dna_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_dark"
        android:text="@string/dna_title_protected_object"
        android:textColor="@android:color/white"
        android:padding="@dimen/activity_title_padding"
        android:textSize="@dimen/activity_title_text_size"
        android:layout_alignParentTop="true"
        android:gravity="center"
        style="@style/BoldText"/>

    <EditText
        android:id="@+id/dna_sensor_name_et"
        android:layout_below="@+id/dna_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/device_name_et_margin"
        android:hint="@string/dna_object_name"
        android:text="@string/dna_object_name_default"
        android:textSize="@dimen/device_name_et_text_size"
        android:background="@android:color/white"
        android:textColor="@color/gray"
        android:gravity="center"
        android:padding="@dimen/device_name_et_margin"
        android:textStyle="bold"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:maxLength="20"/>

    <io.relayr.commons.widget.CustomTextView
        android:layout_below="@id/dna_sensor_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/device_name_protecting_text_padding"
        android:gravity="center"
        android:textSize="@dimen/device_name_protecting_text_size"
        android:textColor="@android:color/white"
        android:text="@string/dna_what_are_you_protecting"
        style="@style/BoldText"/>

    <io.relayr.commons.widget.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_text_padding"
        android:layout_marginBottom="@dimen/button_text_padding"
        android:padding="@dimen/button_text_padding"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textSize="@dimen/button_text_size"
        android:onClick="onDoneClicked"
        android:enabled="true"
        android:clickable="true"
        android:background="@drawable/button_white"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        style="@style/BoldText"/>

</RelativeLayout>