<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="@dimen/ia_circle_size"
            android:layout_height="@dimen/ia_circle_size"
            android:background="@drawable/round_circle"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <io.relayr.commons.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ia_can_not"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ia_cant"
                android:layout_gravity="center_horizontal"
                style="@style/BoldText"/>

            <io.relayr.commons.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/ia_touch"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ia_touch"
                android:layout_gravity="center_horizontal"
                style="@style/BoldText"/>

            <io.relayr.commons.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ia_this"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ia_this"
                android:layout_gravity="center_horizontal"
                style="@style/BoldText"/>

        </LinearLayout>

        <io.relayr.commons.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/ia_relayr"
            android:textStyle="bold"
            android:textSize="@dimen/ia_relayr"
            android:layout_gravity="center"
            style="@style/BoldText"/>

        <io.relayr.commons.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/ia_demo_app"
            android:textStyle="bold"
            android:textSize="@dimen/ia_demo_app"
            android:layout_gravity="center"
            style="@style/BoldText"/>

    </LinearLayout>
</RelativeLayout>