<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_back"
        android:background="@color/background_dark"
        android:text="@string/sa_title_settings"
        android:textColor="@android:color/white"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/activity_title_padding"
        android:padding="@dimen/activity_title_padding"
        android:textSize="@dimen/activity_title_text_size"
        android:onClick="onBackClick"
        android:clickable="true"
        android:enabled="true"
        style="@style/BoldText"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/sa_alarm_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sa_switch_alarm"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/sa_switch_text_size"
                android:checked="true"
                android:onClick="onAlarmSwitchClick"
                android:layout_marginTop="@dimen/sa_element_padding"
                android:layout_marginBottom="@dimen/sa_element_padding"
                android:padding="@dimen/sa_element_padding" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_dark" />

            <Switch
                android:id="@+id/sa_sound_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sa_switch_sound"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sa_switch_text_size"
                android:checked="false"
                android:onClick="onSoundSwitchClick"
                android:layout_marginTop="@dimen/sa_element_padding"
                android:padding="@dimen/sa_element_padding" />

            <SeekBar
                android:id="@+id/sa_volume_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/sa_seek_bar_padding"
                android:paddingRight="@dimen/sa_seek_bar_padding"
                android:layout_marginBottom="@dimen/sa_element_padding"
                android:layout_gravity="center_horizontal"
                android:max="10" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_dark" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sa_element_padding"
                android:layout_marginTop="@dimen/sa_element_padding">

                <io.relayr.commons.widget.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sa_switch_text_size"
                    android:text="@string/sa_alarm_sensitivity"
                    android:textColor="@android:color/white"
                    android:layout_alignParentLeft="true" />

                <io.relayr.commons.widget.CustomTextView
                    android:id="@+id/sa_alarm_sensitivity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sa_switch_text_size"
                    android:textColor="@android:color/white"
                    android:layout_alignParentRight="true"
                    style="@style/BoldText" />
            </RelativeLayout>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sa_threshold_seek_bar"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/sa_element_padding"
                android:paddingLeft="@dimen/sa_seek_bar_padding"
                android:paddingRight="@dimen/sa_seek_bar_padding"
                android:max="10" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_dark" />

            <io.relayr.commons.widget.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/button_text_padding"
                android:padding="@dimen/button_text_padding"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/button_white"
                android:text="@string/sa_reassign_sensor"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:enabled="true"
                android:clickable="true"
                android:onClick="onReAssignSensorClick"
                style="@style/BoldText"/>

            <io.relayr.commons.widget.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/button_text_padding"
                android:layout_marginBottom="@dimen/button_text_padding"
                android:padding="@dimen/button_text_padding"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/button_white"
                android:text="@string/sa_log_out"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:enabled="true"
                android:clickable="true"
                android:onClick="onLogOutClick"
                style="@style/BoldText"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>